# bookmarks-checker

./: .gitignore  LICENSE  README.md  pyproject.toml
code/: config.py  logs.py  main.py
src/: bookmarks_checker.py  config.py  main.py  start.py
src/basic_utilities/: base_config_project.py  config.py  utilities.py
src/bookmarks/: bookmarks_checker.py  config.py  database.py  report.py
src/logs/: __init__.py  loggers.py  logs.py
src/utilities/: __init__.py  basic_utilities_project.py  config.py  utilities.py
src/web/: __init__.py  router.py
