[project]
name = "bookmarks-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.3",
]

[project.scripts]
start = "start:start"
web = "web.router:web_start"
clear = "start:start_clear"

[tool.uv]
package = true
